started js and added jquery link to html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Crystals Collector</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+ 
+
 </head>
 <body>
     <div class="title">
@@ -20,7 +23,9 @@
         <p>Each time when the game starts, the game will change the values of each crystal.</p>
     </div>
 
-    <div id="randomNumBox">#39</div>
+    <div id="randomNumBox">
+        <h2 id="randomNumber"></h2>
+    </div>
     <div id="winLossBox">
         <p>Wins:<span class="wins"></span></p>
         <p>Losses:<span class="losses"></span></p>
