--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,22 @@
     <title>Crystals Collector</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
- 
+    <script src="http://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
 
 </head>
+
 <body>
     <div class="title">
-    <h1>CrystalsCollector!</h1>
+        <h1>CrystalsCollector!</h1>
     </div>
     <div class="instructions">
         <p> You will be given a random number at the start of the game.</p>
-        <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
-        <p>You win the game by matching your total score to the random number, you lose the game if your total score goes above the random number.</p>
+        <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your
+            total score.</p>
+        <p>You win the game by matching your total score to the random number, you lose the game if your total score
+            goes above the random number.</p>
         <p>The value of each crystal is hidden from you until you click on it.</p>
         <p>Each time when the game starts, the game will change the values of each crystal.</p>
     </div>
@@ -27,22 +32,29 @@
         <h2><span id="randomNumber"></span></h2>
     </div>
     <div id="winLossBox">
-        <p>Wins:<span id="wins"></span></p>
-        <p>Losses:<span id="losses"></span></p>
+        <p class="results">Wins:<span id="wins"></span></p>
+        <p class="results">Losses:<span id="losses"></span></p>
+    </div>
 
-    </div>
     <div class="container">
-        <button class=crystal id="crystal-0" val="2"><img src="assets/images/blue-crystal.png" width="90" height="90"></button>
-        <button class=crystal id="crystal-1" val="5"><img src="assets/images/gold-crystal.png" width="90" height="90"></button>
-        <button class=crystal id="crystal-2" val="6"><img src="assets/images/pink-crystal.png" width="90" height="90"></button>
-        <button class=crystal id="crystal-3" val="3"><img src="assets/images/red-crystal.png" width="90" height="90"></button>
+        <button class=crystal id="crystal-0" val="2"><img src="assets/images/blue-crystal.png" width="90"
+                height="90"></button>
+        <button class=crystal id="crystal-1" val="5"><img src="assets/images/gold-crystal.png" width="90"
+                height="90"></button>
+        <button class=crystal id="crystal-2" val="6"><img src="assets/images/pink-crystal.png" width="90"
+                height="90"></button>
+        <button class=crystal id="crystal-3" val="3"><img src="assets/images/red-crystal.png" width="90"
+                height="90"></button>
     </div>
-    <div class="totalTextbox"><p class="totalText">Your total score is:</p></div>
-    <div id=totalBox>
-        <h2 id="totalScore"></h2>
+    <div class="totalTextbox">
+        <p class="totalText">Your total score is:</p>
+    </div>
+    <div id="totalBox">
+        <h2 id="totalScore">0</h2>
     </div>
 
     <script src="assets/javascript/game.js"></script>
-    
+
 </body>
+
 </html>
